# canonicaljson-uniffi

./: Cargo.toml  build.rs
src/: canonicaljson.idl  lib.rs  main.rs
tests/bindings/: test_canonicaljson.py
